code. Rename CardtreeViewMOdel to CardViewModel
Remove NewCard and Card3 xaml
Fix CardTests

--- a/Diagnosis.App/Controls/Search/NewAutocomplete.xaml
+++ b/Diagnosis.App/Controls/Search/NewAutocomplete.xaml
@@ -73,6 +73,7 @@
 
             <ListBox x:Name="suggestions"
                         MaxHeight="100"
+                     SelectionMode="Extended"
                         FocusManager.IsFocusScope="True"
                         ItemsSource="{Binding Suggestions}"
                         SelectedItem="{Binding SelectedSuggestion, Mode=TwoWay}"
