--- a/Diagnosis.App/Controls/Common/UndoOverlay.xaml
+++ b/Diagnosis.App/Controls/Common/UndoOverlay.xaml
@@ -14,7 +14,7 @@
             <Button Command="{Binding CloseCommand}"
                     Width="16" Height="16"
                     HorizontalAlignment="Right" VerticalAlignment="Top">
-                <Path Data="M0,0 L1,1 M0,1 L1,0" Stretch="Uniform" Stroke="Black" Margin="1" />
+                <Path Data="{StaticResource CloseX}" Stretch="Uniform" Stroke="Black" Margin="1" />
             </Button>
         </DockPanel>
     </Border>
