--- a/Diagnosis.App/Screens/NewPatientEditor.xaml
+++ b/Diagnosis.App/Screens/NewPatientEditor.xaml
@@ -6,10 +6,13 @@
              xmlns:editors="clr-namespace:Diagnosis.App.Controls.Editors"
              xmlns:controls="clr-namespace:Diagnosis.App.Controls"
              xmlns:card="clr-namespace:Diagnosis.App.Controls.CardParts"
+             xmlns:screen="clr-namespace:Diagnosis.ViewModels.Screens;assembly=Diagnosis.ViewModels"
              mc:Ignorable="d"
+             d:DataContext="{DynamicResource vm}"
              d:DesignHeight="300" d:DesignWidth="500">
-    <!--PatientEditorViewModel-->
     <UserControl.Resources>
+        <screen:PatientEditorViewModel x:Key="vm" />
+        
         <Style TargetType="Button">
             <Setter Property="MaxWidth" Value="100" />
             <Setter Property="Height" Value="23" />
@@ -63,19 +66,19 @@
                 <!-- PatientViewModel -->
                 <DockPanel>
                     <Label Content="Метка" />
-                    <TextBlock Text="{Binding Label, ValidatesOnDataErrors=True}" />
+                    <TextBlock Text="{Binding Label, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True}" />
                 </DockPanel>
                 <DockPanel>
                     <Label Content="Фамилия" />
-                    <TextBox Text="{Binding LastName, ValidatesOnDataErrors=True}" />
+                    <TextBox Text="{Binding LastName, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True}" />
                 </DockPanel>
                 <DockPanel>
                     <Label Content="Имя" />
-                    <TextBox Text="{Binding FirstName, ValidatesOnDataErrors=True}" />
+                    <TextBox Text="{Binding FirstName, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True}" />
                 </DockPanel>
                 <DockPanel>
                     <Label Content="Отчество" />
-                    <TextBox Text="{Binding MiddleName, ValidatesOnDataErrors=True}" />
+                    <TextBox Text="{Binding MiddleName, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True}" />
                 </DockPanel>
                 <DockPanel>
                     <Label Content="Дата рождения" />
@@ -89,8 +92,12 @@
         </ScrollViewer>
 
         <StackPanel Grid.Row="1" Grid.ColumnSpan="2" Grid.Column="0" Style="{StaticResource DialogButtonsPanel}">
-            <Button Name="saveAddButton" Command="{Binding SaveAndCreateCommand}" ToolTip="Сохранить и добавить нового пациента" >
+            <!--<Button Name="saveAddButton" Command="{Binding SaveAndCreateCommand}" ToolTip="Сохранить и добавить нового пациента" >
                 <AccessText Text="_Добавить нового"/>
+            </Button>-->
+            <Button Name="saveOpenAppButton" Command="{Binding SaveAndOpenAppCommand}" 
+                    Visibility="{Binding IsUnsaved, Converter={StaticResource BooleanToVisibilityConverter}}" >
+                <AccessText Text="_Добавить осмотр"/>
             </Button>
             <Separator Width="60" Height="0"/>
             <Button Name="saveButton" IsDefault="True" Command="{Binding SaveCommand}">
