card. Fix Navigator.Current binding

--- a/Diagnosis.App/Controls/Common/FullTree.xaml
+++ b/Diagnosis.App/Controls/Common/FullTree.xaml
@@ -20,7 +20,7 @@
     <TreeView x:Name="tree"
             Style="{StaticResource TreeViewStyle}"
             ItemContainerStyle="{Binding ItemContainerStyle, ElementName=fullTree}"
-            ItemsSource="{Binding}">
+            ItemsSource="{Binding ItemsSource, RelativeSource={RelativeSource AncestorType=UserControl}}">
         <TreeView.ItemTemplate>
             <HierarchicalDataTemplate ItemsSource="{Binding Children}">
                 <ContentPresenter Content="{Binding}" ContentTemplate="{Binding ItemTemplate, ElementName=fullTree}" />
