--- a/Diagnosis.App/Windows/AppointmentEditorWindow.xaml
+++ b/Diagnosis.App/Windows/AppointmentEditorWindow.xaml
@@ -1,9 +1,10 @@
 ﻿<Window x:Class="Diagnosis.App.Windows.AppointmentEditorWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:controls="clr-namespace:Diagnosis.App.Controls"  
         Title="{Binding Title}" Height="170" Width="250"         
-        xmlns:windows="clr-namespace:Diagnosis.App.Windows"  
-        windows:DialogCloser.DialogResult="{Binding DialogResult}"
+        controls:DialogCloser.DialogResult="{Binding DialogResult}"        
+        controls:FocusBehavior.FocusFirst="True"
         ShowInTaskbar="False" ResizeMode="NoResize" WindowStyle="ToolWindow"  >
     <Grid Margin="0,0,10,10">
         <Grid.RowDefinitions>
