--- a/Diagnosis.App/Controls/CardParts/HealthRecordsList.xaml
+++ b/Diagnosis.App/Controls/CardParts/HealthRecordsList.xaml
@@ -107,9 +107,24 @@
                 <Style TargetType="{x:Type ListBoxItem}" BasedOn="{StaticResource {x:Type ListBoxItem}}">
                     <Setter Property="IsSelected" Value="{Binding IsSelected, Mode=TwoWay}" />
                     <Setter Property="controls:Attached.InputBindings" Value="{StaticResource HRInputBindings}" />
+                    <Setter Property="Tag" Value="{Binding DataContext, ElementName=hrList}" />
+                    <Setter Property="ContextMenu">
+                        <!-- here because HR is not focusable -->
+                        <Setter.Value>
+                            <ContextMenu>
+                                <!-- ShortHr -->
+                                <MenuItem Header="Редактировать" Command="{Binding EditCommand}" />
+                                <MenuItem Header="Искать" InputGestureText="Alt + F" Command="{Binding SendToSearchCommand}" />
+                                <MenuItem Header="Удалить" InputGestureText="Del" Command="{Binding DeleteCommand}" />
+                                <Separator />
+                                <!-- HrList -->
+                                <MenuItem Header="Добавить запись" InputGestureText="Ctrl + Enter" Command="{Binding PlacementTarget.Tag.AddHealthRecordCommand, RelativeSource={RelativeSource AncestorType=ContextMenu}}" />
+                            </ContextMenu>
+                        </Setter.Value>
+                    </Setter>
                 </Style>
             </ListBox.ItemContainerStyle>
-            
+
             <ListBox.ContextMenu>
                 <ContextMenu>
                     <MenuItem Header="Добавить запись" InputGestureText="Ctrl + Enter" Command="{Binding AddHealthRecordCommand}" />
