--- a/Diagnosis.App/Controls/Search/NewAutocomplete.xaml
+++ b/Diagnosis.App/Controls/Search/NewAutocomplete.xaml
@@ -10,10 +10,14 @@
              mc:Ignorable="d"
              d:DesignHeight="300" d:DesignWidth="300">
     <UserControl.CommandBindings>
-        <CommandBinding Command="Paste" Executed="CommandBinding_Executed"/>
-        <CommandBinding Command="Copy" Executed="CommandBinding_Executed"/>
-        <CommandBinding Command="Cut" Executed="CommandBinding_Executed"/>
+        <CommandBinding Command="Paste" Executed="CommandBinding_Executed" />
+        <CommandBinding Command="Copy" Executed="CommandBinding_Executed" />
+        <CommandBinding Command="Cut" Executed="CommandBinding_Executed" />
     </UserControl.CommandBindings>
+    <UserControl.InputBindings>
+        <KeyBinding Key="F2" Command="{Binding EditCommand}" />
+
+    </UserControl.InputBindings>
     <UserControl.Resources>
         <InputBindingCollection x:Shared="False" x:Key="TagInputBindings">
             <KeyBinding Key="Delete" Command="{Binding DeleteCommand}" />
@@ -33,7 +37,7 @@
     <!-- Autocomplete -->
     <StackPanel>
         <!--<ToggleButton IsChecked="{Binding IsDrag}" Content="drag" />-->
-        <ListBox x:Name="input" 
+        <ListBox x:Name="input"
                  ScrollViewer.HorizontalScrollBarVisibility="Disabled"
                  HorizontalContentAlignment="Stretch"
                  ItemsSource="{Binding Tags}"
@@ -55,18 +59,13 @@
             </ListBox.InputBindings>
             <ListBox.ItemContainerStyle>
                 <Style TargetType="{x:Type ListBoxItem}" BasedOn="{StaticResource {x:Type ListBoxItem}}">
-                    <Style.Triggers>
-                        <!--<Trigger Property="IsKeyboardFocusWithin" Value="True">
-                            <Setter Property="IsSelected" Value="True" />
-                        </Trigger>-->
-                        <!--<DataTrigger Binding="{Binding IsSelected}" Value="True">
-                            <Setter Property="IsSelected" Value="True" />
-                        </DataTrigger>-->
-                    </Style.Triggers>
-                    <Setter Property="IsSelected" Value="{Binding IsSelected, Mode=TwoWay}" />
                     <Setter Property="controls:Attached.InputBindings" Value="{StaticResource TagInputBindings}" />
                     <Setter Property="HorizontalContentAlignment" Value="Stretch" />
                     <Setter Property="Padding" Value="2" />
+                    
+                    <Setter Property="IsSelected" Value="{Binding IsSelected, Mode=TwoWay}" />
+                    <Setter Property="controls:FocusExtension.Direct" Value="True" />
+                    <Setter Property="controls:FocusExtension.IsFocused" Value="{Binding IsListItemFocused, Mode=TwoWay}" />
                 </Style>
             </ListBox.ItemContainerStyle>
             <ListBox.ItemTemplate>
