Fix Hide not working Revert
A collection with cascade="all-delete-orphan" was no longer referenced
by the owning entity instance: Diagnosis.Models.HealthRecord.HrItems.

--- a/Diagnosis.App/Controls/Editors/HealthRecordEditorShared.xaml
+++ b/Diagnosis.App/Controls/Editors/HealthRecordEditorShared.xaml
@@ -47,12 +47,12 @@
                         <TextBlock Text="Добавить" />
                     </DockPanel>
                 </Button>-->
-                <Button Command="{Binding RevertCommand}" ToolTip="Отменить изменения">
+                <!--<Button Command="{Binding RevertCommand}" ToolTip="Отменить изменения">
                     <DockPanel>
                         <Image Source="{StaticResource undoImage}" />
-                        <!--<TextBlock Text="Отменить" />-->
+                        --><!--<TextBlock Text="Отменить" />--><!--
                     </DockPanel>
-                </Button>
+                </Button>-->
                 <Button Command="{Binding DeleteCommand}" ToolTip="Удалить запись">
                     <DockPanel>
                         <Image Source="{StaticResource deleteImage}"  Width="16" />
