--- a/Diagnosis.App/Controls/Search/Tag.xaml
+++ b/Diagnosis.App/Controls/Search/Tag.xaml
@@ -5,6 +5,7 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:controls="clr-namespace:Diagnosis.App.Controls"
              xmlns:auto="clr-namespace:Diagnosis.ViewModels.Search.Autocomplete;assembly=Diagnosis.Viewmodels"
+             xmlns:dd="clr-namespace:GongSolutions.Wpf.DragDrop;assembly=GongSolutions.Wpf.DragDrop"
              mc:Ignorable="d"
              d:DesignHeight="25" d:DesignWidth="300">
     <DockPanel>
@@ -26,9 +27,12 @@
             <ContentPresenter Content="{StaticResource line}" />
             <ContentPresenter Content="{StaticResource line}" Margin="2,0,0,0" />
         </StackPanel>
-        <TextBox x:Name="query" controls:FocusExtension.IsFocused="{Binding IsTextBoxFocused, Mode=TwoWay}"
-             Text="{Binding Query, UpdateSourceTrigger=PropertyChanged}"
-             IsReadOnly="{Binding IsDeleteOnly}">
+        <TextBox x:Name="query" 
+                 controls:FocusExtension.IsFocused="{Binding IsTextBoxFocused, Mode=TwoWay}"
+                 dd:DragDrop.IsDropTarget="True"
+                 dd:DragDrop.DropHandler="{Binding}"
+                 Text="{Binding Query, UpdateSourceTrigger=PropertyChanged}"
+                 IsReadOnly="{Binding IsDeleteOnly}">
             <TextBox.Style>
                 <Style TargetType="TextBox" BasedOn="{StaticResource {x:Type TextBox}}">
                     <Setter Property="Background" Value="White" />
