--- a/Diagnosis.App/Controls/Search/Tag.xaml
+++ b/Diagnosis.App/Controls/Search/Tag.xaml
@@ -87,6 +87,9 @@
                         </MenuItem.Header>
                     </MenuItem>
                     <Separator />
+                    <MenuItem Header="Добавить слева" Command="{Binding AddLeftCommand}" />
+                    <MenuItem Header="Добавить справа" Command="{Binding AddRightCommand}" />
+                    <Separator />
                     <MenuItem Command="{x:Static ApplicationCommands.Cut}" />
                     <MenuItem Command="{x:Static ApplicationCommands.Copy}" />
                     <MenuItem Command="{x:Static ApplicationCommands.Paste}" />
