autcomplete. Last cannot be cut or dragged
--HG--
branch : f/CopyPasteTags

--- a/Diagnosis.App/Controls/Search/NewAutocomplete.xaml
+++ b/Diagnosis.App/Controls/Search/NewAutocomplete.xaml
@@ -49,6 +49,7 @@
                  dd:DragDrop.IsDragSource="True"
                  dd:DragDrop.IsDropTarget="True"
                  dd:DragDrop.DropHandler="{Binding DropHandler}"
+                 dd:DragDrop.DragHandler="{Binding DragHandler}"
                  GotFocus="input_GotFocus"
                  LostFocus="input_LostFocus"
                  PreviewKeyDown="input_PreviewKeyDown"
