--- a/Diagnosis.App/Windows/CourseEditorWindow.xaml
+++ b/Diagnosis.App/Windows/CourseEditorWindow.xaml
@@ -2,7 +2,8 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:controls="clr-namespace:Diagnosis.App.Controls"  
-        Title="{Binding Title}" Height="170" Width="250"         
+        Title="{Binding Title}" 
+        Height="170" Width="250"
         controls:DialogCloser.DialogResult="{Binding DialogResult}"
         controls:FocusBehavior.FocusFirst="True"
         ShowInTaskbar="False" ResizeMode="NoResize" WindowStyle="ToolWindow"  >
