--- a/Diagnosis.App/Windows/PatientEditorWindow.xaml
+++ b/Diagnosis.App/Windows/PatientEditorWindow.xaml
@@ -1,25 +1,31 @@
-﻿<UserControl x:Class="Diagnosis.App.Screens.NewPatientEditor"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             xmlns:editors="clr-namespace:Diagnosis.App.Controls.Editors"
-             xmlns:controls="clr-namespace:Diagnosis.App.Controls"
-             xmlns:card="clr-namespace:Diagnosis.App.Controls.CardParts"
-             xmlns:screen="clr-namespace:Diagnosis.ViewModels.Screens;assembly=Diagnosis.ViewModels"
-             controls:FocusBehavior.FocusFirst="True"
-             mc:Ignorable="d"
-             d:DataContext="{DynamicResource vm}"
-             d:DesignHeight="300" d:DesignWidth="500">
-    <UserControl.Resources>
+﻿<Window x:Class="Diagnosis.App.Windows.PatientEditorWindow"
+        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+        xmlns:editors="clr-namespace:Diagnosis.App.Controls.Editors"
+        xmlns:controls="clr-namespace:Diagnosis.App.Controls"
+        xmlns:card="clr-namespace:Diagnosis.App.Controls.CardParts"
+        xmlns:screen="clr-namespace:Diagnosis.ViewModels.Screens;assembly=Diagnosis.ViewModels"
+        Title="{Binding Title}"
+        Height="320" Width="500"
+        controls:DialogCloser.DialogResult="{Binding DialogResult}"
+        controls:FocusBehavior.FocusFirst="True"
+        ShowInTaskbar="False" ResizeMode="NoResize" WindowStyle="ToolWindow"
+        mc:Ignorable="d"
+        d:DataContext="{DynamicResource vm}">
+    <!--PatientViewModel-->
+    <Window.Resources>
         <screen:PatientEditorViewModel x:Key="vm" />
-        
+
+        <Style TargetType="DockPanel" BasedOn="{StaticResource formLine}" />
+        <Style TargetType="Label" BasedOn="{StaticResource label120}" />
         <Style TargetType="Button">
             <Setter Property="MaxWidth" Value="100" />
             <Setter Property="Height" Value="23" />
             <Setter Property="Margin" Value="5" />
         </Style>
-    </UserControl.Resources>
+    </Window.Resources>
     <Grid Margin="10">
         <Grid.ColumnDefinitions>
             <ColumnDefinition MaxWidth="180" Width="auto" />
@@ -93,20 +99,20 @@
         </ScrollViewer>
 
         <StackPanel Grid.Row="1" Grid.ColumnSpan="2" Grid.Column="0" Style="{StaticResource DialogButtonsPanel}">
-            <!--<Button Name="saveAddButton" Command="{Binding SaveAndCreateCommand}" ToolTip="Сохранить и добавить нового пациента" >
-                <AccessText Text="_Добавить нового"/>
+            <!--<Button Name="saveAddButton" Command="{Binding SaveAndCreateCommand}" ToolTip="Сохранить и добавить нового пациента">
+                <AccessText Text="_Добавить нового" />
             </Button>-->
-            <Button Name="saveOpenAppButton" Command="{Binding SaveAndOpenAppCommand}" 
-                    Visibility="{Binding IsUnsaved, Converter={StaticResource BooleanToVisibilityConverter}}" >
-                <AccessText Text="_Добавить осмотр"/>
+            <Button Name="saveOpenAppButton" Command="{Binding SaveAndOpenAppCommand}"
+                    Visibility="{Binding IsUnsaved, Converter={StaticResource BooleanToVisibilityConverter}}">
+                <AccessText Text="_Добавить осмотр" />
             </Button>
-            <Separator Width="60" Height="0"/>
+            <Separator Width="60" Height="0" />
             <Button Name="saveButton" IsDefault="True" Command="{Binding SaveCommand}">
-                <AccessText Text="_Сохранить"/>
+                <AccessText Text="_Сохранить" />
             </Button>
             <Button Name="cancelButton" IsCancel="True" Command="{Binding CancelCommand}">
-                <AccessText Text="Отмена"/>
+                <AccessText Text="Отмена" />
             </Button>
         </StackPanel>
     </Grid>
-</UserControl>
+</Window>
