--- a/Diagnosis.App/Controls/CardParts/CardItem.xaml
+++ b/Diagnosis.App/Controls/CardParts/CardItem.xaml
@@ -17,7 +17,7 @@
 
     <UserControl.ContextMenu>
         <ContextMenu>
-            <MenuItem Header="Редактировать" Command="{Binding EditCommand}" />
+            <MenuItem Header="Редактировать" InputGestureText="F2" Command="{Binding EditCommand}" />
             <MenuItem Header="Добавить курс" Command="{Binding StartCourseCommand}" />
             <MenuItem Header="Добавить осмотр" Command="{Binding AddAppointmentCommand}" />
             <MenuItem Header="Открыть" Command="{Binding OpenCommand}" />
