--- a/Diagnosis.App/Windows/AppointmentEditorWindow.xaml
+++ b/Diagnosis.App/Windows/AppointmentEditorWindow.xaml
@@ -1,7 +1,8 @@
 ﻿<Window x:Class="Diagnosis.App.Windows.AppointmentEditorWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:controls="clr-namespace:Diagnosis.App.Controls"  
+        xmlns:controls="clr-namespace:Diagnosis.App.Controls"
+        xmlns:ex="clr-namespace:Xceed.Wpf.Toolkit;assembly=Xceed.Wpf.Toolkit"
         Title="{Binding Title}" Height="170" Width="250"         
         controls:DialogCloser.DialogResult="{Binding DialogResult}"        
         controls:FocusBehavior.FocusFirst="True"
@@ -20,6 +21,10 @@
             <DockPanel>
                 <Label Content="Дата" />
                 <DatePicker Text="{Binding Appointment.DateAndTime, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True}" />
+            </DockPanel>
+            <DockPanel>
+                <Label Content="Время" />
+                <ex:TimePicker Value="{Binding Appointment.DateAndTime, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True}"  />
             </DockPanel>
         </StackPanel>
 
